# fitsyms

./: README.md  pyproject.toml
config/: bdcam.yaml  egand.yaml  sulyn.yaml  v1472aql.yaml
paper/: run_sensitivity.py
tests/: test_config.py  test_physics.py  test_results.py  test_sampling.py
